--- a/StateSynth/modified_cellular_stack/conf/srs_gnb/enb.conf
+++ b/StateSynth/modified_cellular_stack/conf/srs_gnb/enb.conf
@@ -81,8 +81,10 @@ rx_gain = 35
 #time_adv_nsamples = auto
 
 # Example for ZMQ-based operation with TCP transport for I/Q samples
-device_name = uhd
-# device_args = fail_on_disconnect=true,tx_port=tcp://*:2000,rx_port=tcp://localhost:2001,id=enb,base_srate=11.52e6
+# Should work equally well for bladeRF
+# srsUE should use zmq channels
+device_name = zmq
+device_args = fail_on_disconnect=true,tx_port=tcp://*:2000,rx_port=tcp://localhost:2001,id=enb,base_srate=11.52e6
 
 #####################################################################
 # Packet capture configuration
@@ -154,8 +156,11 @@ s1ap_filename = /tmp/enb_s1ap.pcap
 #####################################################################
 [log]
 all_level = info
+rrc_level = debug
+pdcp_level = debug
+mac_level = debug
 all_hex_limit = 32
-filename = /tmp/enb.log
+filename = stdout # why two files, if we redirect anyway?
 file_max_size = -1
 
 [gui]
