--- a/StateSynth/modified_cellular_stack/5GBaseChecker_OAI_gnb/targets/PROJECTS/GENERIC-NR-5GC/CONF/ue.conf
+++ b/StateSynth/modified_cellular_stack/5GBaseChecker_OAI_gnb/targets/PROJECTS/GENERIC-NR-5GC/CONF/ue.conf
@@ -2,20 +2,22 @@ uicc0 = {
 imsi = "001011234567895";
 key = "00000000000000000000000064617665";
 opc= "64097b52589f63f12eec5172b49929d9";
-dnn= "oai";
+dnn= "internet";
 nssai_sst=1;
 nssai_sd=1;
 }
 
 log_config :
 {
-  global_log_level                      ="alert";
+  global_log_level                      ="info";
   hw_log_level                          ="info";
-  phy_log_level                         ="alert";
+  phy_log_level                         ="info";
   mac_log_level                         ="info";
   rlc_log_level                         ="info";
   pdcp_log_level                        ="info";
   rrc_log_level                         ="info";
-  ngap_log_level                        ="debug";
-  f1ap_log_level                        ="debug";
+  ngap_log_level                        ="info";
+  f1ap_log_level                        ="info";
+  nas_log_level                        ="info";
 };
+
