Buildable and reproducible setup for evaluation

--- a/StateSynth/modified_cellular_stack/conf/srs_gnb/enb.conf
+++ b/StateSynth/modified_cellular_stack/conf/srs_gnb/enb.conf
@@ -39,9 +39,9 @@ n_prb = 50
 # rb_config:   SRB/DRB configuration file 
 #####################################################################
 [enb_files]
-sib_config = sib.conf
-rr_config  = rr.conf
-rb_config = rb.conf
+sib_config = /conf/srs_gnb/provided/sib.conf
+rr_config  = /conf/srs_gnb/provided/rr.conf
+rb_config = /conf/srs_gnb/provided/rb.conf
 
 #####################################################################
 # RF configuration
@@ -67,6 +67,13 @@ rb_config = rb.conf
 tx_gain = 35
 rx_gain = 35
 
+[slicing]
+enable_eMBB = true
+#enable_URLLC = false
+#enable_MIoT = false
+eMBB_sd = 0
+#URLLC_sd = 1
+#MIoT_sd = 1
 #device_name = auto
 
 # For best performance in 2x2 MIMO and >= 15 MHz use the following device_args settings:
