--- a/StateSynth/modified_cellular_stack/conf/srs_gnb/provided/enb.conf
+++ b/StateSynth/modified_cellular_stack/conf/srs_gnb/provided/enb.conf
@@ -39,9 +39,9 @@ n_prb = 50
 # rb_config:   SRB/DRB configuration file 
 #####################################################################
 [enb_files]
-sib_config = sib.conf
-rr_config  = rr.conf
-rb_config = rb.conf
+sib_config = /conf/srs_gnb/provided/sib.conf
+rr_config  = /conf/srs_gnb/provided/rr.conf
+rb_config = /conf/srs_gnb/provided/rb.conf
 
 #####################################################################
 # RF configuration
