--- a/StateSynth/modified_cellular_stack/5GBaseChecker_Core/meson.build
+++ b/StateSynth/modified_cellular_stack/5GBaseChecker_Core/meson.build
@@ -85,6 +85,7 @@ if cc.get_id() == 'gcc' or cc.get_id() == 'clang'
 
         '-Wno-sign-compare',
         '-Wno-unused-parameter',
+        '-Wno-compound-token-split-by-macro',
 
         '-ffast-math',
         '-fdiagnostics-show-option',
