--- a/StateSynth/modified_cellular_stack/5GBaseChecker_srs_gnb/lib/CMakeLists.txt
+++ b/StateSynth/modified_cellular_stack/5GBaseChecker_srs_gnb/lib/CMakeLists.txt
@@ -24,7 +24,7 @@
 add_subdirectory(src)
 add_subdirectory(include)
 add_subdirectory(examples)
-add_subdirectory(test)
+# add_subdirectory(test)
 
 ########################################################################
 # Install library headers
