--- a/StateSynth/modified_cellular_stack/5GBaseChecker_srs_gnb/srsenb/CMakeLists.txt
+++ b/StateSynth/modified_cellular_stack/5GBaseChecker_srs_gnb/srsenb/CMakeLists.txt
@@ -47,7 +47,7 @@ link_directories(
 # Add subdirectories
 ########################################################################
 add_subdirectory(src)
-add_subdirectory(test)
+# add_subdirectory(test)
 
 ########################################################################
 # Default configuration files
