--- a/StateSynth/modified_cellular_stack/5GBaseChecker_srs_gnb/srsue/src/stack/mac_nr/CMakeLists.txt
+++ b/StateSynth/modified_cellular_stack/5GBaseChecker_srs_gnb/srsue/src/stack/mac_nr/CMakeLists.txt
@@ -29,4 +29,4 @@ set(SOURCES mac_nr.cc
 add_library(srsue_mac_nr STATIC ${SOURCES})
 target_link_libraries(srsue_mac_nr srsue_mac_common srsran_mac)
 
-add_subdirectory(test)
+# add_subdirectory(test)
